<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSong</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_query">SongQuery</string>
    <string name="title_activity_singer_query">SingerQuery</string>
    <string name="title_activity_singer_type_query">SingerArea</string>
    <string name="title_activity_order_one_song">OrderOneSong</string>
    <string name="title_activity_language_query">LanguageQuery</string>
    <string name="orderOneSongString">Please Input the Computer ID</string>
    <string name="computerIdString">Computer ID:</string>
    <string name="noResultString">No result.</string>
    <string name="failedMessage">Failed.</string>
    <string name="succeededMessage">Succeeded.</string>
    <string name="loadingString">Loading ...</string>

    <string name="mainMenuTitle">Please Select One Option</string>
    <string name="singerOrderString">Songs By Singer</string>
    <string name="newSongOrderString">Songs By New Published</string>
    <string name="hotSongOrderString">Songs By Most Popular"</string>
    <string name="languageOrderString">Songs By Language</string>
    <string name="wordsListMenuTitle">Please Select one option</string>
    <string name="exitProgram">Exit Program</string>

    <string name="maleSinger">Male Singers</string>
    <string name="femaleSinger">Female Singers</string>
    <string name="groupSinger">Group Singers</string>
    <string name="returnToPrevious">Return</string>

    <string name="languagesListString">Languages List</string>
    <string name="newSOngLanguagesListString">Languages List of New Songs</string>
    <string name="hotSongLanguagesListString">Languages List of Hot Songs</string>
    <string name="singerTypesListString">Singer Types List</string>
    <string name="songsListString">Songs List</string>
    <string name="singersListString">Singers List</string>

    <string name="firstPage">First Page</string>
    <string name="previousPage">Prev Page</string>
    <string name="nextPage">Next Page</string>
    <string name="lastPage">Last Page</string>
    <string name="returnTo">Return</string>

    <string name="areaNo">Area No</string>
    <string name="areaNa">Area Name</string>
    <string name="sex">Sex</string>

    <string name="oneWordOrderString">One Word</string>
    <string name="twoWordsOrderString">Two Words</string>
    <string name="threeWordsOrderString">Three Words</string>
    <string name="fourWordsOrderString">Four Words</string>
    <string name="fiveWordsOrderString">Five Words</string>
    <string name="sixWordsOrderString">Six Words</string>
    <string name="sevenWordsOrderString">Seven Words</string>
    <string name="eightWordsOrderString">Eight Words</string>
    <string name="nineWordsOrderString">Nine Words</string>
    <string name="tenWordsOrderString">Ten Words or More</string>

    <string name="singerNameString">"Singer's Name"</string>
    <string name="songNameString">"Song's Name"</string>

</resources>
