<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    tools:context=".WordsListActivity">

    <TextView
        android:id="@+id/wordsListMenuTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textStyle="bold"
        android:textColor="@color/darkOrange"
        android:text="@string/wordsListMenuTitle"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintTop_toBottomOf="@+id/wordsListMenuTextView"
        android:weightSum="10">

        <Button
            android:id="@+id/oneWordOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oneWordOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/twoWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twoWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/threeWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/threeWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/fourWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/fiveWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fiveWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/sixWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/sevenWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sevenWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/eightWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eightWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/nineWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nineWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
        <Button
            android:id="@+id/tenWordsOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenWordsOrderString"
            android:background="@android:drawable/btn_default"
            android:textColor="@color/blue"
            android:layout_weight="1">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/wordsListReturnButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/returnToPrevious"
        android:background="@android:drawable/btn_default"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent" >
    </Button>

</android.support.constraint.ConstraintLayout>