<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff00ff00"
    android:weightSum="10">

    <TextView
        android:id="@+id/singerListTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:textScaleX="1.0"
        android:textColor="#ff0000ff"
        android:text="@string/singerListString"
        android:layout_weight="1"/>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff90e5c4"
        android:scrollbarStyle="outsideOverlay"
        android:layout_weight="8" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="5">

        <Button
            android:id="@+id/firstPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/firstPage"
            android:textStyle="bold"
            android:background="@android:drawable/btn_default"
            android:textColor="#ffff0000"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/previousPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previousPage"
            android:textStyle="bold"
            android:background="@android:drawable/btn_default"
            android:textColor="#ffff0000"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/nextPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nextPage"
            android:textStyle="bold"
            android:background="@android:drawable/btn_default"
            android:textColor="#ffff0000"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/lastPageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lastPage"
            android:textStyle="bold"
            android:background="@android:drawable/btn_default"
            android:textColor="#ffff0000"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <Button
            android:id="@+id/returnToPreviousButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/returnTo"
            android:textStyle="bold"
            android:background="@android:drawable/btn_default"
            android:textColor="#ff000000"
            android:layout_gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>